feat: validations corrected & message about successful registration added

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -26,6 +26,7 @@ body {
 // blocks
 @import "blocks/reg.scss";
 @import "blocks/validation-alert.scss";
+@import "blocks/success-message.scss";
 
 // media files
 @import "base/media";
